deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-for-aa-1127
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template-for-aa-1127
  template:
    metadata:
      labels:
        app: template-for-aa-1127
    spec:
      containers:
      - name: template-for-aa-1127-container
        image: cepgbaseacr.azurecr.io/template-for-aa-1127
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgres-pvc
