service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-template-for-aa-1127
spec:
  selector:
    app: template-for-aa-1127
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
